--- a/projects/my-lib/src/lib/composed/login-card/src/login-card.html
+++ b/projects/my-lib/src/lib/composed/login-card/src/login-card.html
@@ -1,11 +1,19 @@
-<!-- login.component.html -->
-<div class="login-container">
-  <div class="login-box">
-    <h1 class="login-title">Login Page</h1>
-    <div class="login-form">
+<div class="sign-page">
+  <div class="sign-card">
+    <lib-heading class="sign-title" [config]="headingconfig"></lib-heading>
+    <lib-paragraph class="sign-subtitle" [config]="paragraphconfig"></lib-paragraph>
+    <div class="sign-form">
       <lib-text [config]="emailconfig"></lib-text>
       <lib-text [config]="passwordconfig"></lib-text>
       <lib-buttons [config]="loginconfig"></lib-buttons>
+      <div class="account-switch">
+        <span>Don't have an account?</span>
+        <lib-buttons
+          (click)="goToRegister()"
+          class="register-button"
+          [config]="gotoregisterconfig"
+        ></lib-buttons>
+      </div>
     </div>
   </div>
 </div>
