--- a/projects/my-lib/src/lib/elements/text/src/text.html
+++ b/projects/my-lib/src/lib/elements/text/src/text.html
@@ -1,1 +1,6 @@
-<input [class]="textstyle" [type]="config.type" [placeholder]="config.label" />
+<input
+  [class]="textstyle"
+  [type]="config.type"
+  [placeholder]="config.label"
+  [(ngModel)]="config.value"
+/>
