new elements added && primeNG installed

--- a/projects/my-lib/src/lib/composed/account-page/src/account-page.html
+++ b/projects/my-lib/src/lib/composed/account-page/src/account-page.html
@@ -5,3 +5,9 @@
 <div>
   <lib-paragraph [config]="successedconfig"></lib-paragraph>
 </div>
+<div>
+  <lib-date-picker></lib-date-picker>
+</div>
+<div>
+  <lib-phone-number></lib-phone-number>
+</div>
