--- a/projects/my-lib/src/lib/elements/button/src/button.html
+++ b/projects/my-lib/src/lib/elements/button/src/button.html
@@ -1,3 +1,3 @@
-<button class="{{ buttonstyle }}" [type]="config.type || 'button'" (click)="config.onclick()">
+<p-button class="{{ buttonstyle }}" [type]="config.type || 'button'" (click)="config.onclick()">
   {{ config.label || 'Click' }}
-</button>
+</p-button>
