--- a/projects/my-lib/src/lib/elements/input/src/input.html
+++ b/projects/my-lib/src/lib/elements/input/src/input.html
@@ -1,6 +1,1 @@
-<input
-  [class]="textstyle"
-  [type]="config.type"
-  [placeholder]="config.label"
-  [(ngModel)]="config.value"
-/>
+<input [type]="config.type" [placeholder]="config.label" [(ngModel)]="config.value" pInputText />
