primeNG UI/UX design version

--- a/projects/my-lib/src/lib/composed/login-card/src/login-card.html
+++ b/projects/my-lib/src/lib/composed/login-card/src/login-card.html
@@ -1,18 +1,15 @@
-<div class="sign-page">
-  <div class="sign-card">
+<div class="flex justify-content-center align-items-center min-h-screen">
+  <div class="surface-card p-6 shadow-2 border-round w-full md:w-6">
     <lib-heading class="sign-title" [config]="headingconfig"></lib-heading>
     <lib-paragraph class="sign-subtitle" [config]="paragraphconfig"></lib-paragraph>
-    <div class="sign-form">
+    <div class="flex flex-column gap-1 pt-2">
       <lib-input [config]="emailconfig"></lib-input>
       <lib-input [config]="passwordconfig"></lib-input>
+    </div>
+    <div class="flex flex-column gap-1 pt-2">
       <lib-buttons [config]="loginconfig"></lib-buttons>
-      <div class="account-switch">
-        <lib-buttons
-          (click)="goToRegister()"
-          class="register-button"
-          [config]="gotoregisterconfig"
-        ></lib-buttons>
-      </div>
+      <lib-buttons (click)="goToRegister()" [config]="gotoregisterconfig"></lib-buttons>
+      <lib-buttons (click)="goTohome()" [config]="gotohomeconfig"></lib-buttons>
     </div>
   </div>
 </div>
