--- a/projects/my-lib/src/lib/elements/input/src/input.html
+++ b/projects/my-lib/src/lib/elements/input/src/input.html
@@ -1,1 +1,3 @@
-<input [type]="config.type" [placeholder]="config.label" [(ngModel)]="config.value" pInputText />
+<p-input-group>
+  <input [type]="config.type" [placeholder]="config.label" [(ngModel)]="config.value" pInputText />
+</p-input-group>
