--- a/projects/my-lib/src/lib/composed/account-page/src/account-page.html
+++ b/projects/my-lib/src/lib/composed/account-page/src/account-page.html
@@ -1,16 +1,15 @@
-<ul>
-  <li class="styles"><lib-button [config]="gotosigninconfig"></lib-button></li>
-</ul>
-
-<div>
+<div class="flex justify-content-between align-items-center p-1">
   <lib-paragraph [config]="successedconfig"></lib-paragraph>
+  <ul class="m-0 p-0 list-none">
+    <li class="inline-block"><lib-button [config]="gotosigninconfig"></lib-button></li>
+  </ul>
 </div>
-<div>
-  <lib-date-picker></lib-date-picker>
-</div>
-<div>
-  <lib-phone-number></lib-phone-number>
-</div>
-<div>
-  <lib-textarea></lib-textarea>
+
+<div class="flex justify-content-start mt-6 align-items-start">
+  <div class="flex flex-column gap-1 w-full md:w-8">
+    <lib-paragraph [config]="datepickerconfig"></lib-paragraph>
+    <lib-date-picker></lib-date-picker>
+    <lib-paragraph [config]="messageconfig"></lib-paragraph>
+    <lib-textarea></lib-textarea>
+  </div>
 </div>
