--- a/projects/my-lib/src/lib/elements/upload-file/src/upload-file.html
+++ b/projects/my-lib/src/lib/elements/upload-file/src/upload-file.html
@@ -1,13 +1,13 @@
-<p-fileupload
+<p-fileUpload
   name="demo[]"
   url="https://www.primefaces.org/cdn/api/upload.php"
-  [multiple]="true"
+  [multiple]="false"
   accept="image/*"
   maxFileSize="1000000"
   mode="advanced"
-  (onSelect)="handleFileSelect($event)"
+  (onSelect)="onFileSelected($event)"
 >
   <ng-template #empty>
     <div>Drag and drop files to here to upload.</div>
   </ng-template>
-</p-fileupload>
+</p-fileUpload>
