--- a/projects/my-lib/src/lib/elements/ui/table-grid/src/table-grid.html
+++ b/projects/my-lib/src/lib/elements/ui/table-grid/src/table-grid.html
@@ -5,14 +5,16 @@
   [rows]="config()?.rows ?? 10"
   [showCurrentPageReport]="config()?.showCurrentPageReport ?? true"
   [rowsPerPageOptions]="config()?.rowsPerPageOptions ?? [10, 25, 50]"
-  [reorderableRows]="config()?.sortableRows ?? false"
+  [reorderableRows]="true"
   (onRowReorder)="onRowReorder.emit($event)"
-  [selectionMode]="config()?.rowSelection === 'none' ? undefined : config()?.rowSelection"
+  [selectionMode]="
+    (config()?.rowSelection ?? '') === 'none' ? undefined : config()?.rowSelection ?? ''
+  "
   [(selection)]="selectedRows"
   dataKey="id"
   [lazy]="true"
   (onLazyLoad)="onLazyLoad($event)"
-  [globalFilterFields]="config()?.columns.map(c => c.name) || []"
+  [globalFilterFields]="config()!.columns.map(c => c.name) || []"
   (onSort)="onColumnSort.emit($event)"
 >
   <ng-template pTemplate="header">
@@ -26,7 +28,7 @@
       } @for (col of config()?.columns; track col.name) {
       <th
         [pSortableColumn]="
-          config()?.enableColumnSorting && col.sortable !== false ? col.name : null
+          (config()?.enableColumnSorting || false) && col.sortable !== false ? col.name : null
         "
       >
         {{ col.label }}
@@ -34,11 +36,12 @@
         <p-sortIcon [field]="col.name"></p-sortIcon>
         }
       </th>
-      } @if (config()?.enableStaticActions || config()?.dynamicActions?.length > 0) {
+      } @if ((config()?.enableStaticActions || false) || (config()?.dynamicActions || [])?.length >
+      0) {
       <th>Actions</th>
       }
     </tr>
-    @if (config()?.showQuickSearch && config()?.columns.some(c => c.filter)) {
+    @if (shouldApplyFilter()) {
     <tr>
       @if (config()?.rowSelection !== 'none' && config()?.rowSelection === 'multiple') {
       <th></th>
@@ -56,7 +59,8 @@
         />
         }
       </th>
-      } @if (config()?.enableStaticActions || config()?.dynamicActions?.length > 0) {
+      } @if ((config()?.enableStaticActions || false) || (config()?.dynamicActions || [])?.length >
+      0) {
       <th></th>
       }
     </tr>
@@ -74,23 +78,20 @@
       </td>
       } @for (col of config()?.columns; track col.name) {
       <td>
-        <ng-container [ngSwitch]="col.type">
-          @case ('date') {
-          {{ rowData[col.name] | date : 'shortDate' }}
-          } @case ('number') {
-          {{ rowData[col.name] | number }}
-          } @case ('long-string') {
-          <span [pTooltip]="rowData[col.name]" tooltipPosition="bottom">
-            {{
-              (rowData[col.name] | slice : 0 : 50) + (rowData[col.name].length > 50 ? '...' : '')
-            }}
-          </span>
-          } @default {
-          {{ rowData[col.name] }}
-          }
-        </ng-container>
+        @switch (col.type) { @case ('date') {
+        {{ rowData[col.name] | date : 'shortDate' }}
+        } @case ('number') {
+        {{ rowData[col.name] | number }}
+        } @case ('long-string') {
+        <span [pTooltip]="rowData[col.name]" tooltipPosition="bottom">
+          {{ (rowData[col.name] | slice : 0 : 50) + (rowData[col.name].length > 50 ? '...' : '') }}
+        </span>
+        } @default {
+        {{ rowData[col.name] }}
+        } }
       </td>
-      } @if (config()?.enableStaticActions || config()?.dynamicActions?.length > 0) {
+      } @if ((config()?.enableStaticActions || false) || (config()?.dynamicActions || [])?.length >
+      0) {
       <td>
         <div class="flex gap-2">
           @if (config()?.enableStaticActions?.edit) {
@@ -120,9 +121,9 @@
           } @for (action of config()?.dynamicActions; track action.label) { @if (!action.visible ||
           action.visible(rowData)) {
           <p-button
-            [icon]="action.icon"
+            [icon]="action.icon || ''"
             [label]="action.label"
-            (onClick)="action.onClick(rowData)"
+            (onClick)="action.onclick(rowData)"
             [styleClass]="'p-button-sm ' + (action.styleClass || '')"
             [pTooltip]="action.tooltip || action.label"
             tooltipPosition="bottom"
