adding sorting of table + update http create to post and update to put

--- a/projects/my-lib/src/lib/elements/ui/table-grid/src/table-grid.html
+++ b/projects/my-lib/src/lib/elements/ui/table-grid/src/table-grid.html
@@ -5,7 +5,8 @@
   [rows]="config()?.rows ?? 10"
   [showCurrentPageReport]="config()?.showCurrentPageReport ?? true"
   [rowsPerPageOptions]="config()?.rowsPerPageOptions ?? [10, 25, 50]"
-  (onRowReorder)="onRowReorder.emit($event)"
+  (onRowReorder)="rowsReOrderCallback($event)"
+  (onPage)="pageChangeCallback($event)"
   [selectionMode]="selectionMode"
   [(selection)]="selectedRows"
   dataKey="id"
