--- a/projects/my-lib/src/lib/composed/account-page/src/account-page.html
+++ b/projects/my-lib/src/lib/composed/account-page/src/account-page.html
@@ -1,7 +1,9 @@
 <div class="flex justify-content-between align-items-center p-1">
   <nz-paragraph [config]="successedconfig"></nz-paragraph>
   <ul class="m-0 p-0 list-none">
-    <li class="inline-block"><nz-buttons [config]="gotosigninconfig"></nz-buttons></li>
+    <li class="inline-block">
+      <nz-standard-button [config]="gotosigninconfig"></nz-standard-button>
+    </li>
   </ul>
 </div>
 
