--- a/projects/my-lib/src/lib/composed/birthday-card/src/birthday-card.html
+++ b/projects/my-lib/src/lib/composed/birthday-card/src/birthday-card.html
@@ -7,7 +7,10 @@
     <nz-standarduploadfile (imageSelected)="onImageSelected($event)"></nz-standarduploadfile>
 
     <!-- Button -->
-    <nz-buttons [config]="createcard" class="flex justify-content-end pt-2"></nz-buttons>
+    <nz-standard-button
+      [config]="createcard"
+      class="flex justify-content-end pt-2"
+    ></nz-standard-button>
   </nz-standard-card>
 
   <!-- Display created birthday cards -->
