--- a/projects/my-lib/src/lib/composed/login-card/src/login-card.html
+++ b/projects/my-lib/src/lib/composed/login-card/src/login-card.html
@@ -1,26 +1,18 @@
-<div class="flex justify-content-center align-items-center min-h-screen">
-  <!-- Card -->
-  <div class="surface-card shadow-2 border-round p-6 w-full md:w-6 lg:w-4 flex flex-column gap-4">
-    <!-- Heading -->
-    <nz-heading class="sign-title" [config]="headingconfig"></nz-heading>
+<!-- Heading -->
+<nz-heading class="sign-title" [config]="headingconfig"></nz-heading>
 
-    <!-- Paragraph / Subtitle -->
-    <nz-paragraph class="sign-subtitle" [config]="paragraphconfig"></nz-paragraph>
+<!-- Paragraph / Subtitle -->
+<nz-paragraph class="sign-subtitle" [config]="paragraphconfig"></nz-paragraph>
 
-    <!-- Inputs -->
-    <div class="flex flex-column gap-3">
-      <nz-email [config]="emailconfig"></nz-email>
-      <nz-password [config]="passwordconfig"></nz-password>
-    </div>
+<!-- Inputs -->
+<div class="flex flex-column gap-3">
+  <nz-email [config]="emailconfig"></nz-email>
+  <nz-password [config]="passwordconfig"></nz-password>
+</div>
 
-    <!-- Buttons -->
-    <div class="flex flex-column sm:flex-row gap-2 justify-content-between">
-      <nz-standard-button [config]="loginconfig"></nz-standard-button>
-      <nz-standard-button
-        (click)="goToRegister()"
-        [config]="gotoregisterconfig"
-      ></nz-standard-button>
-      <nz-standard-button (click)="goTohome()" [config]="gotohomeconfig"></nz-standard-button>
-    </div>
-  </div>
+<!-- Buttons -->
+<div class="flex flex-column sm:flex-row gap-2 justify-content-between">
+  <nz-standard-button [config]="loginconfig"></nz-standard-button>
+  <nz-standard-button (click)="goToRegister()" [config]="gotoregisterconfig"></nz-standard-button>
+  <nz-standard-button (click)="goTohome()" [config]="gotohomeconfig"></nz-standard-button>
 </div>
