--- a/projects/my-lib/src/lib/composed/component-configuration/src/component-configuration.html
+++ b/projects/my-lib/src/lib/composed/component-configuration/src/component-configuration.html
@@ -6,12 +6,14 @@
     </p-tablist>
     <p-tabpanels>
       <p-tabpanel value="fieldInfo">
-        <nz-input [config]="nameFieldConfig"></nz-input>
-        <nz-input [config]="labelFieldConfig"></nz-input>
-        <nz-input [config]="hintFieldConfig"></nz-input>
+        <div class="flex flex-column gap-2">
+          <nz-input [config]="nameFieldConfig"></nz-input>
+          <nz-input [config]="labelFieldConfig"></nz-input>
+          <nz-input [config]="hintFieldConfig"></nz-input>
+        </div>
       </p-tabpanel>
       <p-tabpanel value="settings">
-        <div formGroupName="settings">
+        <div formGroupName="settings" class="flex flex-column gap-2">
           <nz-input [config]="valueFieldConfig"></nz-input>
           <nz-input [config]="placeholderFieldConfig"></nz-input>
           <nz-input [config]="patternFieldConfig"></nz-input>
@@ -24,4 +26,8 @@
       </p-tabpanel>
     </p-tabpanels>
   </p-tabs>
+  <div class="flex justify-content-end gap-2">
+    <nz-button [config]="cancelBtn"></nz-button>
+    <nz-button [config]="saveBtn"></nz-button>
+  </div>
 </form>
