--- a/projects/my-lib/src/lib/auth/login-card/src/login-card.html
+++ b/projects/my-lib/src/lib/auth/login-card/src/login-card.html
@@ -13,6 +13,9 @@
 <!-- Buttons -->
 <div class="flex flex-column sm:flex-row gap-2 justify-content-between">
   <nz-standard-button [config]="loginconfig"></nz-standard-button>
-  <nz-standard-button (click)="goToRegister()" [config]="gotoregisterconfig"></nz-standard-button>
-  <nz-standard-button (click)="goTohome()" [config]="gotohomeconfig"></nz-standard-button>
+  <nz-standard-button (click)="goToRegister()" [config]="goToRegisterConfig"></nz-standard-button>
+  <nz-standard-button
+    (click)="goToForgotPassword()"
+    [config]="goToForgotPasswordConfig"
+  ></nz-standard-button>
 </div>
