--- a/projects/my-lib/src/lib/auth/login-card/src/login-card.html
+++ b/projects/my-lib/src/lib/auth/login-card/src/login-card.html
@@ -19,3 +19,8 @@
     [config]="goToForgotPasswordConfig"
   ></nz-standard-button>
 </div>
+
+<!--Alert dialog-->
+<div>
+  <nz-alert-dialog (successLogin)="login()"></nz-alert-dialog>
+</div>
