--- a/projects/my-lib/src/lib/auth/register-card/src/register-card.html
+++ b/projects/my-lib/src/lib/auth/register-card/src/register-card.html
@@ -16,3 +16,8 @@
   <nz-standard-button [config]="registerconfig"></nz-standard-button>
   <nz-standard-button (click)="goToLogin()" [config]="backtologinconfig"></nz-standard-button>
 </div>
+
+<!--Alert dialog-->
+<div>
+  <nz-alert-dialog (successRegistration)="register()"></nz-alert-dialog>
+</div>
