--- a/projects/my-lib/src/lib/elements/ui/alert-dialog/src/alert-dialog.html
+++ b/projects/my-lib/src/lib/elements/ui/alert-dialog/src/alert-dialog.html
@@ -1,3 +1,3 @@
 <p-dialog [header]="config.title" [modal]="true" [ngClass]="dialogtype">
-  <p-message [severity]="severity" [text]="config.message"></p-message>
+  <p-message [icon]="icon" [severity]="severity" [text]="config.message"></p-message>
 </p-dialog>
