new updates to profile adding validators

--- a/projects/my-lib/src/lib/account/profile/profile.html
+++ b/projects/my-lib/src/lib/account/profile/profile.html
@@ -1,13 +1,11 @@
-<app-floating-configurator />
-
 <!-- Heading -->
-<nz-heading class="sign-title" [config]="headingconfig"></nz-heading>
+<nz-heading [config]="headingConfig"></nz-heading>
 
 <!-- Inputs -->
 <div class="flex flex-column gap-3">
-  <nz-password [config]="oldPasswordconfig"></nz-password>
-  <nz-password [config]="newPasswordconfig"></nz-password>
-  <nz-password [config]="confirmPasswordconfig"></nz-password>
+  <nz-password [config]="oldPasswordConfig"></nz-password>
+  <nz-password [config]="newPasswordConfig"></nz-password>
+  <nz-password [config]="confirmPasswordConfig"></nz-password>
 </div>
 
 <!-- Buttons -->
