--- a/projects/my-lib/src/lib/auth/forgetpassword-card/src/forgetpassword-card.html
+++ b/projects/my-lib/src/lib/auth/forgetpassword-card/src/forgetpassword-card.html
@@ -1,16 +1,16 @@
 <!-- Heading -->
-<nz-heading class="sign-title" [config]="headingconfig"></nz-heading>
+<nz-heading class="sign-title" [config]="headingConfig"></nz-heading>
 
 <!-- Paragraph / Subtitle -->
-<nz-paragraph class="sign-subtitle" [config]="paragraphconfig"></nz-paragraph>
+<nz-paragraph class="sign-subtitle" [config]="paragraphConfig"></nz-paragraph>
 
 <!-- Inputs -->
 <div class="flex flex-column gap-3">
-  <nz-email [config]="emailconfig"></nz-email>
+  <nz-email [config]="emailConfig"></nz-email>
 </div>
 
 <!-- Buttons -->
 <div class="flex flex-column sm:flex-row gap-2 justify-content-between">
   <nz-standard-button [config]="confirmEmailConfig"></nz-standard-button>
-  <nz-standard-button (click)="goToLogin()" [config]="goToLoginConfig"></nz-standard-button>
+  <nz-standard-button (click)="gotoLogin()" [config]="goToLoginConfig"></nz-standard-button>
 </div>
