--- a/projects/my-lib/src/lib/auth/login-card/src/login-card.html
+++ b/projects/my-lib/src/lib/auth/login-card/src/login-card.html
@@ -1,21 +1,21 @@
 <!-- Heading -->
-<nz-heading class="sign-title" [config]="headingconfig"></nz-heading>
+<nz-heading class="sign-title" [config]="headingConfig"></nz-heading>
 
 <!-- Paragraph / Subtitle -->
-<nz-paragraph class="sign-subtitle" [config]="paragraphconfig"></nz-paragraph>
+<nz-paragraph class="sign-subtitle" [config]="paragraphConfig"></nz-paragraph>
 
 <!-- Inputs -->
 <div class="flex flex-column gap-3">
-  <nz-email [config]="emailconfig"></nz-email>
-  <nz-password [config]="passwordconfig"></nz-password>
+  <nz-email [config]="emailConfig"></nz-email>
+  <nz-password [config]="passwordConfig"></nz-password>
 </div>
 
 <!-- Buttons -->
 <div class="flex flex-column sm:flex-row gap-2 justify-content-between">
-  <nz-standard-button [config]="loginconfig"></nz-standard-button>
-  <nz-standard-button (click)="goToRegister()" [config]="goToRegisterConfig"></nz-standard-button>
+  <nz-standard-button [config]="loginConfig"></nz-standard-button>
+  <nz-standard-button [config]="gotoRegisterConfig"></nz-standard-button>
   <nz-standard-button
     (click)="goToForgotPassword()"
-    [config]="goToForgotPasswordConfig"
+    [config]="gotoForgotPasswordConfig"
   ></nz-standard-button>
 </div>
