auth screens styling + link component

--- a/projects/my-lib/src/lib/auth/forgetpassword-card/src/forgetpassword-card.html
+++ b/projects/my-lib/src/lib/auth/forgetpassword-card/src/forgetpassword-card.html
@@ -5,12 +5,11 @@
 <nz-paragraph class="sign-subtitle" [config]="paragraphConfig"></nz-paragraph>
 
 <!-- Inputs -->
-<div class="flex flex-column gap-3">
+<div class="flex flex-col gap-3 mt-6">
   <nz-email [config]="emailConfig"></nz-email>
-</div>
-
-<!-- Buttons -->
-<div class="flex flex-column sm:flex-row gap-2 justify-content-between">
-  <nz-standard-button [config]="confirmEmailConfig"></nz-standard-button>
-  <nz-standard-button (click)="gotoLogin()" [config]="goToLoginConfig"></nz-standard-button>
+  <!-- Buttons -->
+  <div class="flex flex-col gap-2 justify-content-between">
+    <nz-standard-button [config]="confirmEmailConfig"></nz-standard-button>
+    <nz-link [config]="goToLoginConfig"></nz-link>
+  </div>
 </div>
