--- a/projects/my-lib/src/lib/auth/register-card/src/register-card.html
+++ b/projects/my-lib/src/lib/auth/register-card/src/register-card.html
@@ -5,14 +5,13 @@
 <nz-paragraph class="sign-subtitle" [config]="paragraphconfig"></nz-paragraph>
 
 <!-- Inputs -->
-<div class="flex flex-column gap-3">
+<div class="flex flex-col gap-3 mt-6">
   <nz-name [config]="nameconfig"></nz-name>
   <nz-email [config]="emailconfig"></nz-email>
   <nz-password [config]="passwordconfig"></nz-password>
-</div>
-
-<!-- Buttons -->
-<div class="flex flex-column sm:flex-row gap-2 justify-content-between">
-  <nz-standard-button [config]="registerconfig"></nz-standard-button>
-  <nz-standard-button (click)="gotoLogin()" [config]="backtologinconfig"></nz-standard-button>
+  <!-- Buttons -->
+  <div class="flex flex-col gap-2 justify-content-between mt-2">
+    <nz-standard-button [config]="registerconfig"></nz-standard-button>
+    <nz-link [config]="backtologinconfig"></nz-link>
+  </div>
 </div>
