profile + change password + reset password

--- a/projects/my-lib/src/lib/account/profile/profile.html
+++ b/projects/my-lib/src/lib/account/profile/profile.html
@@ -3,12 +3,11 @@
 
 <!-- Inputs -->
 <div class="flex flex-column gap-3">
-  <nz-password [config]="oldPasswordConfig"></nz-password>
-  <nz-password [config]="newPasswordConfig"></nz-password>
-  <nz-password [config]="confirmPasswordConfig"></nz-password>
+  <nz-name [config]="nameconfig"></nz-name>
+  <nz-email [config]="emailconfig"></nz-email>
 </div>
 
 <!-- Buttons -->
 <div class="flex flex-column sm:flex-row gap-2 justify-content-between">
-  <nz-standard-button [config]="changePasswordConfig"></nz-standard-button>
+  <nz-standard-button [config]="saveConfig"></nz-standard-button>
 </div>
