fix edit profile style

--- a/projects/my-lib/src/lib/account/profile/src/profile.html
+++ b/projects/my-lib/src/lib/account/profile/src/profile.html
@@ -2,12 +2,12 @@
 <nz-heading [config]="headingConfig"></nz-heading>
 
 <!-- Inputs -->
-<div class="flex flex-column gap-3">
+<div class="flex flex-col gap-3">
   <nz-name [config]="nameconfig"></nz-name>
   <nz-email [config]="emailconfig"></nz-email>
 </div>
 
 <!-- Buttons -->
-<div class="flex flex-column sm:flex-row gap-2 justify-content-between">
+<div class="flex flex-col gap-2 justify-content-between mt-2">
   <nz-standard-button [config]="saveConfig"></nz-standard-button>
 </div>
