p-password Element with some updates in composed and reusable

--- a/projects/my-lib/src/lib/account/change-password/src/change-password.html
+++ b/projects/my-lib/src/lib/account/change-password/src/change-password.html
@@ -4,11 +4,11 @@
 <!-- Inputs -->
 <div class="flex flex-col gap-3">
   @if (!config.isReset) {
-    <nz-password [config]="oldPasswordConfig"></nz-password>
+    <nz-standard-password [config]="oldPasswordConfig"></nz-standard-password>
   }
 
-  <nz-password [config]="newPasswordConfig"></nz-password>
-  <nz-password [config]="confirmPasswordConfig"></nz-password>
+  <nz-standard-password [config]="newPasswordConfig"></nz-standard-password>
+  <nz-standard-password [config]="confirmPasswordConfig"></nz-standard-password>
   <div class="flex flex-col gap-2 justify-content-between mt-2">
     <nz-standard-button [config]="saveConfig"></nz-standard-button>
   </div>
