--- a/projects/my-lib/src/lib/auth/login-card/src/login-card.html
+++ b/projects/my-lib/src/lib/auth/login-card/src/login-card.html
@@ -7,7 +7,7 @@
 <!-- Inputs -->
 <div class="flex flex-col gap-3 mt-6">
   <nz-email [config]="emailConfig"></nz-email>
-  <nz-password [config]="passwordConfig"></nz-password>
+  <nz-standard-password [config]="passwordConfig"></nz-standard-password>
   <div class="flex items-center justify-between mt-2 mb-8 gap-8">
     <div class="flex items-center">
       <p-checkbox id="rememberme1" binary class="mr-2"></p-checkbox>
