--- a/projects/my-lib/src/lib/auth/register-card/src/register-card.html
+++ b/projects/my-lib/src/lib/auth/register-card/src/register-card.html
@@ -8,7 +8,7 @@
 <div class="flex flex-col gap-3 mt-6">
   <nz-name [config]="nameconfig"></nz-name>
   <nz-email [config]="emailconfig"></nz-email>
-  <nz-password [config]="passwordconfig"></nz-password>
+  <nz-standard-password [config]="passwordconfig"></nz-standard-password>
   <!-- Buttons -->
   <div class="flex flex-col gap-2 justify-content-between mt-2">
     <nz-standard-button [config]="registerconfig"></nz-standard-button>
