--- a/projects/my-lib/src/lib/account/profile/src/profile.html
+++ b/projects/my-lib/src/lib/account/profile/src/profile.html
@@ -8,6 +8,6 @@
 </div>
 
 <!-- Buttons -->
-<div class="flex flex-col gap-2 justify-content-between mt-2">
+<div class="flex gap-2 justify-content-between mt-2">
   <nz-standard-button [config]="saveConfig"></nz-standard-button>
 </div>
